package edu.fiuba.algo3.modelo;

public interface Ejecutable {
    public void ejecutarTurno( RazaRecursos razaRecursos);
}
